--- a/pets.html
+++ b/pets.html
@@ -19,9 +19,9 @@
 <body>
 <div class="container">
  <div class="header"> <h1> This is web page for Suman`s pets </h1> </div>
- <div class="col1"> <span class="a">My dog-Sheru</span><img src="images/dog.jpg"></div>
- <div class="col2"> <span class="b">My Cow-Nandi</span><img src="images/cow.jpg"> </div>
- <div class="col3"> <span class="c">My Elephant-Eravat</span><img src="images/elephant.jpg"></div>
+ <div class="col1"> <span class="a">My dog-Sheru</span><img src="dog.jpg"></div>
+ <div class="col2"> <span class="b">My Cow-Nandi</span><img src="cow.jpg"> </div>
+ <div class="col3"> <span class="c">My Elephant-Eravat</span><img src="elephant.jpg"></div>
  <div class="footer"> Copyright&copy2011 W3schools.com </div>
 </div>
 </body>
