--- a/이력서.html
+++ b/이력서.html
@@ -16,7 +16,7 @@
 
 
 	<h1> RESUME </h1>
-	<img src="images/1234.jpg"/>
+	<img src="1234.jpg"/>
 	<div class="col1"> -My name is Do Hyeon Jun </div>
 	<div class="col2"> -grade: freshman </div>
 	<div class="col3"> -academic background: Daegu Catholic University </div>
