--- a/이력서 재작성.html
+++ b/이력서 재작성.html
@@ -60,7 +60,7 @@
 	</div>
 	<table>
 	<tr>
-		<td> <img src="/1234.jpg"/></td>
+		<td> <img src="1234.jpg"/></td>
 		<td> phone num:01099802379 </td>
 		<td> family member:7 </td>
 		<td> academic background: DCU </td>
